# scie-pikesquares

./: .env  .gitignore  .gitmodules  CHANGES.md  Cargo.toml  README.md  justfile  pikesquares.ini  pikesquares.toml
.github/workflows/: ci.yml  release.yml
package/: Cargo.toml  build.rs  pbt.toml  scie-pikesquares.toml
package/src/: main.rs  scie_pikesquares.rs  tools_pex.rs
package/src/utils/: build.rs  exe.rs  fs.rs  logging.rs  mod.rs  os.rs
src/: build_root.rs  config.rs  main.rs
tools/: lock.json  pyproject.toml  requirements.txt
tools/src/scie_pikesquares/: __init__.py  bootstrap_tools.py  configure_pikesquares.py  install_pikesquares.py  log.py  pikesquares_release_tags.json  pikesquares_version.py  ptex.py  record_scie_pikesquares_info.py  update_scie_pikesquares.py
tools/src/scie_pikesquares.dist-info/: entry_points.txt
